# unified-hifi-control

./: .eslintignore  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.ci  Dockerfile.release  Makefile  README.md  RUST_SPIKE.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pkg-lms.json
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/: RELEASE_TEMPLATE.md
.github/workflows/: api-guard.yml  build.yml  docker.yml  pr-packages.yml  release.yml
.oh/: hqplayer-spec.md
docs/: ARCHITECTURE.md  Dioxus-components-research.md  LMS-PLUGIN-SPEC.md  gh-release.md  hqplayer-protocol-audit.md  hqplayer-protocol-reference.md  issue-68-75-research.md  lyrion.md  protocol.md
docs/adr/: 002-single-binary-assets.md
docs/tasks/: phase-1-bus-foundation.md
lms-plugin/: Helper.pm  Plugin.pm  Settings.pm  install.xml  repo.xml  strings.txt
mcp/: index.js
muse-events/: Cargo.toml
muse-events/src/: events.rs  ingest.rs  lib.rs  zone.rs
plugin/.claude-plugin/: plugin.json
plugin/commands/: setup.md
public/: dx-components-theme.css  index.html  tailwind.css
scripts/: build-binaries.js  build-installers.js  build-lms-plugin.js  build-nas-packages.js  pre-commit  sync-version.js
src/: aggregator.rs  coordinator.rs  event_reporter.rs  firmware.rs  index.js  input.css  lib.rs  lms-entry.js  main.rs  mdns.rs
src/adapters/: handle.rs  hqplayer.rs  lms.rs  mod.rs  mqtt.rs  openhome.rs  roon.rs  roon_browse.rs  traits.rs  upnp.rs
src/api/: mod.rs
src/app/: api.rs  mod.rs  settings_context.rs  sse.rs  theme.rs
src/bus/: adapter.js  debug.js  events.rs  index.js  mod.rs
src/components/: mod.rs
src/config/: mod.rs
src/firmware/: index.js
src/hqplayer/: client.js  native-client.js  service.js
src/knobs/: image.rs  rgb565.test.js  routes.js  routes.rs  store.js  (+1 more)
tests/: adapter_integration.rs  api_contract.rs  architecture_lint.rs  await_in_lock_lint.rs  client_harness.rs  ignored_send_lint.rs  oneshot_leak_lint.rs  protocol_integration.rs  protocol_schema.rs  unbounded_channel_lint.rs  volume_step.rs  zones_sha_integration.rs
(+41 files in other folders)
