[package]
name = "muse-events"
version = "0.1.0"
edition = "2021"
authors = ["Open Horizon Labs <support@openhorizonlabs.com>"]
description = "Shared wire protocol types for the Muse ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-horizon-labs/muse-events"
keywords = ["audio", "music", "streaming", "events"]
categories = ["multimedia::audio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
